--- a/app.json
+++ b/app.json
@@ -30,7 +30,10 @@
       "buildNumber": "1.0.0",
       "infoPlist": {
         "NSPhotoLibraryUsageDescription": "Use the photo library to change your avatar.",
-        "CFBundleDevelopmentRegion": "ja_JP"
+        "CFBundleDevelopmentRegion": "ja_JP",
+        "UIFileSharingEnabled": true,
+        "LSSupportsOpeningDocumentsInPlace": true,
+        "UISupportsDocumentBrowser": true
       },
       "userInterfaceStyle": "automatic"
     },
