--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "expo-dev-client": "~2.4.6",
     "expo-file-system": "~15.4.2",
     "expo-font": "~11.4.0",
-    "expo-stable-diffusion": "^0.1.1",
+    "expo-stable-diffusion": "^0.1.2",
     "expo-updates": "~0.18.8",
     "global": "^4.4.0",
     "lottie-react-native": "5.1.6",
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-auto-height-image": "^3.2.4",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
