--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.72.1",
     "react-native-auto-height-image": "^3.2.4",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-material-menu": "^2.0.0",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
